--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.2.7"
   }
 }
