--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adtechai-marketing",
+  "name": "contact-tsunami-marketing",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
