Tokenized company name for easy rebranding - Created src/constants.js with centralized company branding - Replaced all hard-coded company names with constants - Updated all components, pages, and email templates - Added script to generate public files with constants - Updated package.json with generate-public script - Fixed unused imports warnings - All functionality preserved with tokenized branding

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "dev": "npm run build && npm run server"
+    "dev": "npm run build && npm run server",
+    "generate-public": "node scripts/generate-public-files.js"
   },
   "eslintConfig": {
     "extends": [
