Test auto-sync with renamed repository - Updated all branding to RiptideB2B - Testing Vercel auto-sync with GitHub rename

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contact-tsunami-marketing",
+  "name": "riptideb2b-server",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
