--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,10 @@
     },
     {
       "src": "api/send-email.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 10
+      }
     }
   ],
   "routes": [
@@ -25,10 +28,5 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "api/send-email.js": {
-      "maxDuration": 10
-    }
   }
 }
