feat: Transform to ChatB2B coming soon landing page
- Implement sophisticated coming soon experience with email capture
- Add full-screen, distraction-free design with oceanic theme
- Include email validation and form state management
- Update branding from RiptideB2B to ChatB2B
- Configure production-ready deployment settings
- Add comprehensive documentation and README
- Implement WCAG 2.1 AA accessibility compliance
- Prepare for Brevo email integration

--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "riptideb2b-server",
+  "name": "chatb2b-coming-soon",
   "version": "1.0.0",
   "private": true,
+  "description": "ChatB2B - Coming Soon Landing Page for Conversational AI B2B Software Procurement Platform",
+  "keywords": ["B2B", "AI", "procurement", "chat", "coming-soon", "landing-page", "react"],
+  "author": "ChatB2B Team",
+  "license": "UNLICENSED",
+  "homepage": "https://chatb2b.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jbmatlick/chatb2b.git"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -33,7 +42,9 @@
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "npm run build && npm run server",
-    "generate-public": "node scripts/generate-public-files.js"
+    "generate-public": "node scripts/generate-public-files.js",
+    "predeploy": "npm run build",
+    "deploy": "vercel --prod"
   },
   "eslintConfig": {
     "extends": [
@@ -54,7 +65,8 @@
     ]
   },
   "engines": {
-    "node": "22.x"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
