--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "name": "chatb2b-coming-soon",
   "builds": [
     {
       "src": "package.json",
@@ -30,5 +31,13 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/send-email.js": {
+      "maxDuration": 10
+    }
+  }
 }
