--- a/vercel.json
+++ b/vercel.json
@@ -11,9 +11,17 @@
     {
       "src": "api/send-email.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "api/healthcheck.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
     {
       "src": "/api/send-email",
       "dest": "/api/send-email"
